# LG-page

./: .gitignore  BRD_FORMAT_SUPPORT.md  CMakeCache.txt  CMakeLists.txt  CMakeLists_new.txt  CMakeLists_old.txt  DEBUG_ANALYSIS_GUIDE.md  FILE_BROWSER_GUIDE.md  INTEGRATION_GUIDE.md  NEW_KEY_MAPPINGS.md  PDF_INTEGRATION_SUMMARY.md  README.md  README_AUTH.md  README_new.md  RESTRUCTURE_SUMMARY.md  STYLESHEET_DEBUG_GUIDE.md  TEST_ZOOM_FIX.md  VIEWER_REORGANIZATION_SUMMARY.md  VISIBLE_CONTENT_FIXES.md  ZOOM_FIX_ANALYSIS.cpp  build.bat  check_deps.bat  database_sqlite_schema.sql  databasemanager.h  debug_tab_styles.cpp  debug_test.cpp  deploy.bat  enable_encryption.sh  fix_dlls.ps1  fix_dlls_simple.ps1  get_dlls.bat  get_dlls.ps1  get_dlls_manual.bat  imgui.ini  mainapplication.cpp  mainapplication.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  opengl_debug.txt  (+17 more)
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
.qtcreator/: project.json.user.c07341a
config/: README_themes.md  pcb_themes.json
database/schemas/: database_setup.sql
docs/: HYBRID_PDF_GUIDE.md  INSTALL_MYSQL_ODBC.md  MYSQL_SETUP_GUIDE.md
examples/: hybrid_pdf_demo.cpp
imhex_patterns/: README.md  brd_decrypted_analyzer.hexpat  brd_decrypted_analyzer_fixed.hexpat  brd_detector.hexpat  brd_format.hexpat  brd_text_analyzer.hexpat
include/core/: memoryfilemanager.h
include/database/: databasemanager.h
include/network/: authservice.h  awsclient.h
include/security/: security_envelope.h
include/ui/: LoadingOverlay.h  awsconfigdialog.h  dualtabwidget.h  hybridpdfviewer.h  mainapplication.h  mainwindow.h  pdfscrollstate.h  pdfviewerwidget.h  pdfviewerwidget_simple.h  textextraction.h  textsearch.h  titlebarwidget.h
include/viewers/pcb/: PCBTheme.h  PCBViewerEmbedder.h  PCBViewerWidget.h
include/viewers/pdf/: AsyncRender.h  OpenGLPipelineManager.h  PDFPreviewLoader.h  PDFViewerEmbedder.h  pdfviewerwidget.h
resources/: icons.qrc
resources/images/: placeholder.txt
resources/ui/: mainwindow.ui
scripts/: build_glfw_mingw.bat  check_odbc_drivers.bat  connection_test.bat  run_loginpage.bat  run_w2r_login.bat
server/: README.md  lambda.js  package-lock.json  package.json  server.js
server/api/: file_content.php  files.php
src/core/: main.cpp  memoryfilemanager.cpp
src/database/: databasemanager.cpp
src/network/: authservice.cpp  awsclient.cpp
src/pdf/include/rendering/: pdf-render-stub.h
src/pdf/include/ui/: menu-integration.h
src/pdf/include/utils/: Resource.h
src/pdf/scripts/: build.bat  run_with_debug.bat
src/pdf/src/: globals.cpp
src/pdf/src/core/: main.cpp
src/pdf/src/rendering/: pdf-render.cpp
src/pdf/src/ui/: menu-integration.cpp  tab-manager.cpp
src/security/: security_envelope.cpp
src/ui/: LoadingOverlay.cpp  OpenGLPipelineManager.cpp  PDFViewerEmbedder.cpp  PDFViewerEmbedder.h  QtPDFViewerWidget.cpp  QtPDFViewerWidget.h  awsconfigdialog.cpp  dualtabwidget.cpp  hybridpdfviewer.cpp  mainapplication.cpp  mainwindow.cpp  pdfviewerwidget.cpp  pdfviewerwidget.cpp.backup  pdfviewerwidget_backup.cpp  pdfviewerwidget_clean.cpp  pdfviewerwidget_simple.cpp  textextraction.cpp  titlebarwidget.cpp  toastnotifier.cpp  toastnotifier.h
src/viewers/: README.md
src/viewers/pcb/: README.md  main.cpp
src/viewers/pcb/core/: PCBViewerEmbedder.cpp
src/viewers/pcb/format/: BRD2File.cpp  BRD2File.h  BRDFile.cpp  BRDFile.h  BRDFileBase.cpp  BRDFileBase.h  XZZPCBFile.cpp  XZZPCBFile.h
src/viewers/pcb/imgui/: imgui_stub.h
src/viewers/pcb/rendering/: BRDRenderer.cpp  BRDRenderer.h  PCBRenderer.cpp  PCBRenderer.h
src/viewers/pcb/ui/: pcbviewerwidget.cpp  pcbviewerwidget_old.cpp
src/viewers/pdf/core/: AsyncRender.cpp  PDFPreviewLoader.cpp  PDFViewerEmbedder.cpp
src/viewers/pdf/rendering/: OpenGLPipelineManager.cpp
src/viewers/pdf/ui/: QtPDFViewerWidget.cpp  pdfviewerwidget.cpp
test_documents/: readme.txt
test_documents/config/: app_config.h  app_config.js
test_files/: test.txt
tests/: LoginPage.pro  check_drivers.cpp  test_http.pro  test_mysql_connection.cpp
tools/: batch_brd_decode.py  brd_decoder_gui.py  brd_decrypt.py  simple_brd_decode.py  svg2ico.cpp
